[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Idle.png" type="Texture" id=2]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.0
height = 11.0

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
offset = Vector2( 1, 0 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="Collision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Bullet_spawn" type="Position2D" parent="."]
position = Vector2( 19, 0 )

[node name="RPM_timer" type="Timer" parent="."]
one_shot = true

[node name="Name" type="Label" parent="."]
margin_left = -28.0
margin_top = -30.5
margin_right = 28.0
margin_bottom = -16.5
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
